# infai

./: .cursorignore  .env.sample  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  pyrightconfig.json  todo.md
.cursor/: general.mdc
dumcp/: logging.py  runremote.sh  server.py
scripts/: run-qudrant.sh
setup/: fetch_models.py
src/: datareset.py  dbreset.py  main.py
src/ai/: factory.py  history_preprocessor.py  llm.py  mapper.py  model_request_yields.py  models.py  port.py  prompts.py  pydantic_ai.py  request_node_yields.py  service.py
src/ai/pydantic_ai/: adapter.py  llm.py  mapper.py  service.py  tools.py
src/application/: chat_use_case.py
src/config/: factory.py  models.py
src/core/: database.py  exceptions.py  logging.py
src/history/: models.py  port.py  service.py
src/history/async_sqlalchemy/: adapter.py  mapper.py  models.py
src/history/repo/: async_sqlalchemy_repo.py  mapper.py  repo.py
src/history/service/: models.py  repo_interface.py  service.py
src/rag/: azure.py  clients.py  factory.py  models.py  port.py  service.py
src/rag/qdrant/: clients.py  mapper.py  models.py  service.py
src/search/: __init__.py
src/tools/: models.py
src/tools/factories/: dumcp.py  dumcp_remote.py  dummy_tool.py
src/ui/: console.py  port.py
src/ui/console/: adapter.py  service.py
tests/: conftest.py
tests/core/: test_database.py
tests/history/: test_async_sqlalchemy_repo.py  test_repo.py  test_service.py  utils.py
