[project]
name = "infai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "pydantic-ai-slim[openai]>=1.12.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.4.0",
    "pyright>=1.1.407",
    "pytest>=9.0.0",
    "pytest-asyncio>=0.23.3",
    "requests>=2.32.5",
    "ruff>=0.14.4",
]

[tool.pyright]
strict = ["./"]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
